# cqrs-rs

./: Cargo.toml
src/application/port/outbound/: event_bus.rs  event_repository.rs  lock_manager.rs  mod.rs
src/domain/entity/: aggregate.rs
src/infrastructure/: mod.rs
src/infrastructure/adapter/secondary/event_bus/: channel.rs  mod.rs  nats.rs
src/infrastructure/adapter/secondary/lock_manager/: redis.rs
src/infrastructure/adapter/secondary/storage/: postgres.rs
src/infrastructure/dto/storage/: sql.rs
src/infrastructure/dto/transport/: nats.rs
