[package]
name = "cqrs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.25"
anyhow = "1.0.66"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "postgres",
] }
once_cell = "1.13.0"
crossbeam-channel = "0.5.6"
tokio-stream = "0.1.11"
bb8-redis-cluster = "0.1.0"
redis_cluster_async = "0.7.0"
bb8 = "0.8.0"
tokio = { version = "1.22.0", features = ["full"] }
nats = "0.23.1"
